--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,20 @@ html {
     margin-left: auto;
     margin-right: auto;
     width: 25%;
+    transition: transform .2s;
+}
+
+.logo:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+#instructions {
+  text-align: center;
+  color: white;
+  font-size: 34px;
+  font-weight: bold;
+  line-height: 125px;
 }
 
 .wrapper {
@@ -41,7 +55,7 @@ html {
   text-decoration: none;
   position: absolute;
   top: 50%;
-  left: 47%;
+  left: 46%;
 }
 
 .playBtn:hover {
