--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ html {
 }
 
 .logo {
-    display: block;
+    position: relative;
+    left: 37.7%;
     margin-left: auto;
     margin-right: auto;
     width: 25%;
@@ -202,25 +203,11 @@ section {
 
 .lose-content {
   background-color: #ec2F4B;
-  margin: 5% auto;
-  padding: 20px;
+  margin: 10% auto;
+  padding: 25px;
   border: 4px solid white;
   width: 25%;
   text-align: center;
-}
-    
-.close {
-  color: white;
-  float: right;
-  font-size: 35px;
-  font-weight: bold;
-}
-    
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 #embarrassing {
