--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 html {
-    background: linear-gradient(-45deg, #009FFF, #ec2F4B);
-    background-size: 500% 500%;
-    animation: gradient 12s ease infinite;
+    background-image: linear-gradient(-45deg, rgba(0, 159, 255, 0.45), rgba(236, 47, 75, 0.5)), url('/images/background.jpg');
+    background-size: 110% 110%;
+    height: 100%;
+    animation: gradient 30s ease infinite;
     font-family: "Poppins", sans-serif;
 }
 
@@ -34,7 +35,7 @@ html {
 #instructions {
   text-align: center;
   color: white;
-  font-size: 32px;
+  font-size: 38px;
   font-weight: bold;
   line-height: 125px;
 }
