--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
     background-image: linear-gradient(-45deg, rgba(0, 159, 255, 0.45), rgba(236, 47, 75, 0.5)), url('/images/background.jpg');
     background-size: 110% 110%;
     height: 100%;
-    animation: gradient 30s ease infinite;
+    animation: gradient 28s ease infinite;
     font-family: "Poppins", sans-serif;
 }
 
@@ -254,4 +254,50 @@ section {
   text-align: center;
   font-size: 32px;
   font-weight: bold;
+}
+
+#footer {
+  text-shadow: black 0px 0px 10px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+}
+
+#footertext {
+  color: white;
+  font-size: 16px;
+  position: fixed;
+  width: 100%;
+  bottom: 35px;
+  font-weight: 500;
+  text-shadow: black 0px 0px 10px;
+  text-align: center;
+}
+
+#footer a {
+  color: white;
+}
+
+#footer .social:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+#footer .social {
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+}
+
+#github:hover {
+  color: #FF416C;
+}
+
+#linkedin:hover {
+  color: #4099FF;
 }
