--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
     background-image: linear-gradient(-45deg, rgba(0, 159, 255, 0.45), rgba(236, 47, 75, 0.5)), url('/images/background.jpg');
     background-size: 110% 110%;
+    background-repeat: no-repeat;
     height: 100%;
     animation: gradient 28s ease infinite;
     font-family: "Poppins", sans-serif;
