--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,9 @@ html {
     margin-left: auto;
     margin-right: auto;
     width: 25%;
-    transition: transform .2s;
+    -webkit-transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
 }
 
 .logo:hover {
@@ -322,7 +324,9 @@ section {
   display: block;
   text-align: center;
   padding: 15px;
-  transition: all .5s ease;
+  -webkit-transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
   color: white;
   font-size: 38px;
 }
